Correction couleurs dans les jumpbox

--- a/black_darkblue/theme/stylesheet.css
+++ b/black_darkblue/theme/stylesheet.css
@@ -4680,22 +4680,21 @@ dl.details dd {
 
 .jumpbox-cat-link {
   background-color: #48577a;
-  border-top-color: #0076B1;
   color: #fff; }
 
 .jumpbox-cat-link:hover {
-  background-color: #12A3EB;
-  border-top-color: #12A3EB;
+  background-color: #99301b;
+  border-top-color: #99301b;
   color: #fff; }
 
 .jumpbox-forum-link {
-  background-color: #E1EBF2; }
+  background-color: #383838; }
 
 .jumpbox-forum-link:hover {
-  background-color: #F6F4D0; }
+  background-color: #181818; }
 
 .jumpbox .dropdown .pointer-inner {
-  border-color: #E1EBF2 transparent; }
+  border-color: #383838 transparent; }
 
 .jumpbox-sub-link {
   background-color: #383838; }
